--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/jsonwebtoken": "^8.5.8",
     "add": "^2.0.6",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "date-fns": "^2.25.0",
     "date-fns-tz": "^1.1.6",
     "eslint-config-airbnb-base": "^14.2.1",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.8.0",
